Added minimum set-up to handle requests

--- a/Tests/Bundle/Resources/config/services.yml
+++ b/Tests/Bundle/Resources/config/services.yml
@@ -1,3 +1,6 @@
 services:
+    app.my_controller:
+        class: Gnugat\MicroFrameworkBundle\Tests\Bundle\Controller\MyController
+
     app.my_service:
         class: Gnugat\MicroFrameworkBundle\Tests\Bundle\Service\MyService
