--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,11 @@
     },
     "require": {
         "php": "^5.5.9|^7.0",
+        "symfony/class-loader": "^3.0",
         "symfony/config": "^3.0",
         "symfony/dependency-injection": "^3.0",
-        "symfony/http-kernel": "^3.0"
+        "symfony/http-kernel": "^3.0",
+        "symfony/routing": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.6|^5.0"
