--- a/couscous.yml
+++ b/couscous.yml
@@ -1,17 +1,21 @@
 template:
-    url: https://github.com/CouscousPHP/Template-Light.git
-
-baseUrl: http://gnugat.github.io/micro-framework-bundle
-
-title: Symfony Micro Framework Bundle
-subTitle: Faster, lighter, better Symfony
+    directory: .
 
 github:
-    user: gnugat
-    repo: micro-framework-bundle
+    user: CouscousPHP
+    repo: Template-Light
 
+title: Couscous Light
+subTitle: An amazing template for Couscous.
+
+# The left menu bar
 menu:
     items:
         home:
-            text: Home
-            relativeUrl:
+            text: Home page
+            # You can use relative urls
+            relativeUrl: /
+        couscous:
+            text: Couscous.io
+            # Or absolute urls
+            absoluteUrl: http://couscous.io
