Added official support for symfony/monolog-bundle

--- a/Tests/Bundle/Resources/config/services.yml
+++ b/Tests/Bundle/Resources/config/services.yml
@@ -9,6 +9,8 @@ services:
 
     app.say_hello_handler:
         class: Gnugat\MicroFrameworkBundle\Tests\Bundle\CommandBus\SayHelloHandler
+        arguments:
+            - "@logger"
         tags:
             - { name: tactician.handler, command: Gnugat\MicroFrameworkBundle\Tests\Bundle\CommandBus\SayHello }
-
+            - { name: monolog.logger }
