--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "php": "^5.5.9|^7.0",
         "symfony/class-loader": "^3.0",
         "symfony/config": "^3.0",
+        "symfony/console": "^3.0",
         "symfony/dependency-injection": "^3.0",
         "symfony/http-kernel": "^3.0",
         "symfony/routing": "^3.0"
