--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "symfony/config": "^3.0",
         "symfony/console": "^3.0",
         "symfony/dependency-injection": "^3.0",
+        "symfony/finder": "^3.0",
         "symfony/http-kernel": "^3.0",
         "symfony/routing": "^3.0"
     },
