Created Cache commands

--- a/Resources/config/services/event_dispatcher.yml
+++ b/Resources/config/services/event_dispatcher.yml
@@ -1,5 +1,5 @@
 services:
     event_dispatcher:
-        class: Symfony\Component\EventDispatcher\ContainerAwareEventDispatcher
+        class: 'Symfony\Component\EventDispatcher\ContainerAwareEventDispatcher'
         arguments:
-            - "@service_container"
+            - '@service_container'
