--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "require": {
         "php": "^5.5.9|^7.0",
         "symfony/class-loader": "^3.0",
+        "symfony/filesystem": "^3.0",
         "symfony/config": "^3.0",
         "symfony/console": "^3.0",
         "symfony/dependency-injection": "^3.0",
