Upgraded to Symfony 4
With this upgrade we bring:

* use of `.yaml` extension for configuration instead of `.yml`
* directory tree structure similar to regular PHP libraries rather than odd Symfony Bundles
* service IDs are now the Fully Qualified Class Names
* services are now private by default
* support for LazyCommands and CommandLoader
* PHPUnit 6 for tests

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,7 +4,7 @@
 <phpunit backupGlobals="false" colors="true" syntaxCheck="false" bootstrap="vendor/autoload.php">
     <testsuites>
         <testsuite name="Integration Tests">
-            <directory>Tests</directory>
+            <directory>tests</directory>
         </testsuite>
     </testsuites>
 </phpunit>
