--- a/composer.json
+++ b/composer.json
@@ -14,30 +14,28 @@
         }
     ],
     "autoload": {
-        "psr-4": {
-            "Gnugat\\MicroFrameworkBundle\\": ""
-        },
-        "exclude-from-classmap": [
-            "/Tests/"
-        ]
+        "psr-4": { "Gnugat\\MicroFrameworkBundle\\": "src/" }
     },
     "autoload-dev": {
-        "files": [ "Tests/app/AppKernel.php" ]
+        "psr-4": { "tests\\Gnugat\\MicroFrameworkBundle\\": "tests/" }
     },
     "require": {
-        "php": "^5.5.9|^7.0",
-        "symfony/class-loader": "^3.0",
-        "symfony/filesystem": "^3.0",
-        "symfony/config": "^3.0",
-        "symfony/console": "^3.0",
-        "symfony/dependency-injection": "^3.0",
-        "symfony/finder": "^3.0",
-        "symfony/http-kernel": "^3.0",
-        "symfony/routing": "^3.0"
+        "php": "^7.1",
+        "symfony/config": "^4.0@rc",
+        "symfony/console": "^4.0@rc",
+        "symfony/debug": "^4.0@rc",
+        "symfony/dependency-injection": "^4.0@rc",
+        "symfony/event-dispatcher": "^4.0@rc",
+        "symfony/filesystem": "^4.0@rc",
+        "symfony/finder": "^4.0@rc",
+        "symfony/http-foundation": "^4.0@rc",
+        "symfony/http-kernel": "^4.0@rc",
+        "symfony/routing": "^4.0@rc"
     },
     "require-dev": {
-        "league/tactician-bundle": "^0.4",
-        "phpunit/phpunit": "^5.0",
-        "symfony/monolog-bundle": "^2.0"
+        "phpunit/phpunit": "^6.0",
+        "symfony/monolog-bridge": "^4.0@rc",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/yaml": "^4.0@rc"
     }
 }
