--- a/composer.json
+++ b/composer.json
@@ -20,22 +20,22 @@
         "psr-4": { "tests\\Gnugat\\MicroFrameworkBundle\\": "tests/" }
     },
     "require": {
-        "php": "^7.1",
-        "symfony/config": "^4.0@rc",
-        "symfony/console": "^4.0@rc",
-        "symfony/debug": "^4.0@rc",
-        "symfony/dependency-injection": "^4.0@rc",
-        "symfony/event-dispatcher": "^4.0@rc",
-        "symfony/filesystem": "^4.0@rc",
-        "symfony/finder": "^4.0@rc",
-        "symfony/http-foundation": "^4.0@rc",
-        "symfony/http-kernel": "^4.0@rc",
-        "symfony/routing": "^4.0@rc"
+        "php": "^7.2",
+        "symfony/config": "^5.0",
+        "symfony/console": "^5.0",
+        "symfony/dependency-injection": "^5.0",
+        "symfony/error-handler": "^5.0",
+        "symfony/event-dispatcher": "^5.0",
+        "symfony/filesystem": "^5.0",
+        "symfony/finder": "^5.0",
+        "symfony/http-foundation": "^5.0",
+        "symfony/http-kernel": "^5.0",
+        "symfony/routing": "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
-        "symfony/monolog-bridge": "^4.0@rc",
+        "symfony/monolog-bridge": "^5.0",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/yaml": "^4.0@rc"
+        "symfony/yaml": "^5.0"
     }
 }
