Replaced kernel.root_dir with kernel.project_dir

--- a/config/services/http_kernel.yaml
+++ b/config/services/http_kernel.yaml
@@ -30,7 +30,7 @@ services:
         class: 'Symfony\Component\HttpKernel\Config\FileLocator'
         arguments:
             - '@kernel'
-            - '%kernel.root_dir%/Resources'
+            - '%kernel.project_dir%/Resources'
 
     'Symfony\Component\HttpKernel\Config\FileLocator':
         alias: file_locator
