Upgraded Routing to v5
Replaced:

* generator_cache_class option with generator_class and generator_dumper_class
* matcher_cache_class with matcher_class and matcher_dumper_class
* ServiceRouterLoader with ContainerLoader

--- a/config/services/routing/routing_loader.yaml
+++ b/config/services/routing/routing_loader.yaml
@@ -27,8 +27,8 @@ services:
         tags:
             - { name: routing.loader }
 
-    routing.loader.service:
-        class: 'Symfony\Component\Routing\Loader\DependencyInjection\ServiceRouterLoader'
+    routing.loader.container:
+        class: 'Symfony\Component\Routing\Loader\ContainerLoader'
         arguments:
             - '@service_container'
         tags:
