--- a/config/services/routing.yaml
+++ b/config/services/routing.yaml
@@ -3,8 +3,10 @@ parameters:
         cache_dir: '%kernel.cache_dir%'
         debug: '%kernel.debug%'
         resource_type: '%router.resource_type%'
-        generator_cache_class: '%router.cache_class_prefix%UrlGenerator'
-        matcher_cache_class: '%router.cache_class_prefix%UrlMatcher'
+        generator_class: 'Symfony\Component\Routing\Generator\CompiledUrlGenerator'
+        generator_dumper_class: 'Symfony\Component\Routing\Generator\Dumper\CompiledUrlGeneratorDumper'
+        matcher_class: 'Symfony\Component\Routing\Matcher\CompiledUrlMatcher'
+        matcher_dumper_class: 'Symfony\Component\Routing\Matcher\Dumper\CompiledUrlMatcherDumper'
 
 services:
     router:
