--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!-- http://phpunit.de/manual/current/en/appendixes.configuration.html -->
-<phpunit backupGlobals="false" colors="true" bootstrap="vendor/autoload.php">
+<phpunit
+    backupGlobals="false" colors="true" bootstrap="vendor/autoload.php"
+    displayDetailsOnPhpunitDeprecations="true"
+    >
     <testsuites>
         <testsuite name="Integration Tests">
             <directory>tests</directory>
