Added support for autowiring / autoconfiguring, this time succeeded
It wasn't that autowiring / autoconfiguring wasn't working.
It was just autowired Controllers as a Service.

Now fully functional.

--- a/config/services/http_kernel.yaml
+++ b/config/services/http_kernel.yaml
@@ -18,10 +18,10 @@ services:
         alias: kernel
 
     service_controller_resolver:
-        class: 'Gnugat\MicroFrameworkBundle\Service\ServiceControllerResolver'
+        class: 'Symfony\Component\HttpKernel\Controller\ContainerControllerResolver'
         arguments:
             - '@service_container'
-            - '@controller_resolver'
+            - '@logger'
 
     controller_resolver:
         class: 'Symfony\Component\HttpKernel\Controller\ControllerResolver'
