--- a/tests/App/config/services.yaml
+++ b/tests/App/config/services.yaml
@@ -12,6 +12,11 @@ services:
             - '../config/'
             - '../AppKernel.php'
 
+    tests\Gnugat\MicroFrameworkBundle\App\Game\Public\:
+        resource: '../Game/Public'
+        public: true # Making public so we can test they're in the container
+
     tests\Gnugat\MicroFrameworkBundle\App\Controller\:
         resource: '../Controller/'
+        public: true
         tags: ['controller.service_arguments']
